2008-05-10  Noel O'Boyle <baoilleach@gmail.com>

	* windows-vc2005/OBPythonOBF/setup.py: Adding missing oberror.dll.

2008-05-07  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/opendxformat.cpp: Bug fixing. Now roundtrips OpenDX
	data from APBS. The format will create an empty OBMol with
	attached OBGridData.

2008-05-06  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* Regenerate autotools build system based on Daniel's updated autogen.

	* include/openbabel/mol.h, src/mol.cpp (DeleteAtom, DeleteBond,
	DeleteResidue): Update to allow the user to free an atom, bond or
	residue (i.e., just remove the atom or bond or residue from the molecule).

2008-05-07  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/python/pybel.py: Synch with cinfony.

2008-05-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: initialize static _constraints to a
	OBFFConstraints object.

2008-05-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/parsmarts.cpp: Add if(_pat) before _pat->...(). This was causing
	Avogadro to crash here sometimes.

2008-05-05  Daniel Leidert <daniel.leidert@wgdd.de>

	* autogen.sh: Force aclocal and autoheader to regenerate files to
	avoid timestamp issues (probably not necessary for automake and
	autoconf).

	* include/openbabel/Makefile.am: babelconfig.h is not removed
	automatically. Added it to DISTCLEANFILES.

2008-05-05  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/mol.cpp: Ensure energy is always 0.0.

	* src/formats/gaussformat.cpp: Prevent crash with incorrect partial charges.

	* include/openbabel/base.h, include/openbabel/generic.h: New class
	for 3x3 matrix data (e.g., quadrupole moments).

	* src/formats/adfformat.cpp, src/formats/t41data.h: Initial import
	of Molekel Tape41 support for ADF.

2005-05-04  Marcus D. Hanwell  <marcus@cryos.org>

	* configure.in, src/config.h.in, include/openbabel/forcefield.h: Fixed
	the babelconfig.h file - typo spotted...
